--- a/fashion_mnist.ipynb
+++ b/fashion_mnist.ipynb
@@ -236,64 +236,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "5J0l3ya4oDd0",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "7de0082c-018f-4757-b446-0a3d341df7ef"
-      },
-      "source": [
-        "inspect.getmembers(model.layers[-1])\n",
-        "model.layers[-1].input_shape"
-      ],
-      "execution_count": 69,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(None, 128)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 69
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Bn74o-hmnf-V",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 51
-        },
-        "outputId": "7e1386ac-e0e8-44bf-9bf8-7889508f10b8"
-      },
-      "source": [
-        "print(tf.keras.layers.Conv2D)\n",
-        "print(type(model.layers[0]))"
-      ],
-      "execution_count": 59,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "<class 'tensorflow.python.keras.layers.convolutional.Conv2D'>\n",
-            "<class 'tensorflow.python.keras.layers.convolutional.Conv2D'>\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "KmC0TQbFeugM",
@@ -551,7 +493,7 @@
         "\n",
         "mob_net.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
         "mob_net.summary()\n",
-        "#model.save_weights('init_weights_mob_net.h5')\n",
+        "model.save_weights('init_weights_mob_net.h5')\n",
         "get_complexity(mob_net) #estimate the number of operations / forward step"
       ],
       "execution_count": 84,
@@ -808,8 +750,7 @@
         "mob_net = Model(inputs=input_image, outputs=predict)\n",
         "lr, lr_decay, epochs_decay = 0.001, 0.8, 1\n",
         "scheduler = tf.keras.callbacks.LearningRateScheduler(lambda epoch: lr*lr_decay**(epoch//epochs_decay))\n",
-        "#history = train(mob_net, 50, 0.001, verbose=1, patience=5, scheduler = scheduler, init_weights='init_weights_mob_net.h5')\n",
-        "history = train(mob_net, 50, 0.001, verbose=1, patience=5, scheduler = scheduler)\n",
+        "history = train(mob_net, 50, 0.001, verbose=1, patience=5, scheduler = scheduler, init_weights='init_weights_mob_net.h5')\n",
         "plt.plot(history.history['loss'])\n",
         "plt.plot(history.history['val_loss'])"
       ],
@@ -900,7 +841,7 @@
         "mob_net = Model(inputs=input_image, outputs=predict)\n",
         "lr, lr_decay, epochs_decay = 0.0003, 0.8, 1\n",
         "scheduler = tf.keras.callbacks.LearningRateScheduler(lambda epoch: lr*lr_decay**(epoch//epochs_decay))\n",
-        "history = train(mob_net, 50, 0.001, verbose=1, patience=5, augment='flip', scheduler = scheduler)\n",
+        "history = train(mob_net, 50, 0.001, verbose=1, patience=5, augment='flip', scheduler = scheduler, init_weights='init_weights_mob_net.h5')\n",
         "plt.plot(history.history['loss'])\n",
         "plt.plot(history.history['val_loss'])"
       ],
@@ -974,7 +915,7 @@
         "#mob_net = Model(inputs=input_image, outputs=predict)\n",
         "lr, lr_decay, epochs_decay = 0.0003, 0.8, 1\n",
         "scheduler = tf.keras.callbacks.LearningRateScheduler(lambda epoch: lr*lr_decay**(epoch//epochs_decay))\n",
-        "history = train(mob_net, 50, 0.001, verbose=1, patience=5, augment='flip_rotate', scheduler = scheduler)\n",
+        "history = train(mob_net, 50, 0.001, verbose=1, patience=5, augment='flip_rotate', scheduler = scheduler, init_weights='init_weights_mob_net.h5')\n",
         "plt.plot(history.history['loss'])\n",
         "plt.plot(history.history['val_loss'])"
       ],
